README file added

--- a/card.html
+++ b/card.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="css/default.css" />
-        <link rel="stylesheet" href="css/card.css" />
+        <link rel="stylesheet" href="css/magic-card.css" />
     </head>
     <body>
         <div class="container">
@@ -12,11 +12,11 @@
                 <div class="card-shadow"></div>
 
                 <div class="magic-card" style="background-image: url(assets/card.jpg);">
-                    <div class="reflex"></div>
+                    <div class="glow"></div>
                 </div>
 
                 <div class="magic-card-back" style="background-image: url(assets/back.jpg);">
-                    <div class="reflex"></div>
+                    <div class="glow"></div>
                 </div> 
             </div>
             <!--Component ends here-->
@@ -26,11 +26,11 @@
                 <div class="card-shadow"></div>
 
                 <div class="magic-card" style="background-image: url(assets/card.jpg);">
-                    <div class="reflex"></div>
+                    <div class="glow"></div>
                 </div>
 
                 <div class="magic-card-back" style="background-image: url(assets/back.jpg);">
-                    <div class="reflex"></div>
+                    <div class="glow"></div>
                 </div> 
             </div>
             <!--Component ends here-->
@@ -40,11 +40,11 @@
                 <div class="card-shadow"></div>
 
                 <div class="magic-card" style="background-image: url(assets/card-2.jpg);">
-                    <div class="reflex"></div>
+                    <div class="glow"></div>
                 </div>
 
                 <div class="magic-card-back" style="background-image: url(assets/back.jpg);">
-                    <div class="reflex"></div>
+                    <div class="glow"></div>
                 </div> 
             </div>
             <!--Component ends here-->
@@ -54,11 +54,11 @@
                 <div class="card-shadow"></div>
 
                 <div class="magic-card" style="background-image: url(assets/card.jpg);">
-                    <div class="reflex"></div>
+                    <div class="glow"></div>
                 </div>
 
                 <div class="magic-card-back" style="background-image: url(assets/back.jpg);">
-                    <div class="reflex"></div>
+                    <div class="glow"></div>
                 </div> 
             </div>
             <!--Component ends here-->
@@ -68,11 +68,11 @@
                 <div class="card-shadow"></div>
 
                 <div class="magic-card" style="background-image: url(assets/card-3.png);">
-                    <div class="reflex"></div>
+                    <div class="glow"></div>
                 </div>
 
                 <div class="magic-card-back" style="background-image: url(assets/back.jpg);">
-                    <div class="reflex"></div>
+                    <div class="glow"></div>
                 </div> 
             </div>
             <!--Component ends here-->
@@ -82,17 +82,17 @@
                 <div class="card-shadow"></div>
 
                 <div class="magic-card" style="background-image: url(assets/card-1.jpg);">
-                    <div class="reflex"></div>
+                    <div class="glow"></div>
                 </div>
 
                 <div class="magic-card-back" style="background-image: url(assets/back.jpg);">
-                    <div class="reflex"></div>
+                    <div class="glow"></div>
                 </div> 
             </div>
             <!--Component ends here-->
 
         </div>
 
-        <script type="text/javascript" src="js/magic-card.js" ></script>
+        <script type="text/javascript" src="js/maigc-card.js" ></script>
     </body>
 </html>
